# QingbiaoJun16

./: .gitignore  DECISIONS.md  EXPERIMENT_LOG.md  PROJECT_BOOTSTRAP_PROMPT.md  PROJECT_MEMORY.md  README.md  TODO.md  de_softmax_optimizer.py  forward_bidding_calculator.py  neural_surrogate.py  pyproject.toml  qingbiao.md  surrogate_bid_optimizer.py  validate_de_results.py
de_softmax_results/: best_result.json  best_result.txt  checkpoint_iter_0050.json  checkpoint_iter_0100.json  checkpoint_iter_0150.json  checkpoint_iter_0200.json  checkpoint_iter_0250.json  checkpoint_iter_0300.json  checkpoint_iter_0350.json  checkpoint_iter_0400.json  checkpoint_iter_0450.json  checkpoint_iter_0500.json  checkpoint_iter_0550.json  checkpoint_iter_0600.json  checkpoint_iter_0650.json  checkpoint_iter_0700.json  checkpoint_iter_0750.json  checkpoint_iter_0800.json
de_softmax_validation_results/: validation_report.txt  validation_results.json  validation_summary.csv
tests/: test_de_softmax_optimizer.py  test_neural_surrogate.py  test_surrogate_bid_optimizer.py  test_validate_de_results.py
